fix: Center-align form input elements
On tight screens, will show the three buttons
as either a regular horizontal row, a triangle or a vertical row.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -80,6 +80,10 @@ override */
     border-style: solid;
 }
 
+.game-box form input {
+    text-align: center;
+}
+
 .game-box input:hover,
 .game-box input:active {
     background-color: #9c6a56;
